starter avec des exemples

--- a/jour1/01-install.html
+++ b/jour1/01-install.html
@@ -1,14 +1,37 @@
 <!-- 01-install.html -->
+<!-- google > bootstrap > https://getbootstrap.com/ > 
+https://getbootstrap.com/docs/4.4/getting-started/introduction/#starter-template
+-->
 
-<!-- installer la librairie 
-rappel librairie : 
-des fichiers sui contiennent plein de code
-pour pouvoir utiliser la librairie, il faut au préalable l'installer 
-sur la documentation officielle :
+<!-- 1ère manière d'installer Bootstrap -->
 
-https://getbootstrap.com/ 
-Get Started
+<!-- page html classique 
+<!doctype html>
+<html lang="en">
+  <head>
+      dans la balise head => balise très importante c'est la balise link 
 
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+      balise qui va télécharger un fichier .css qui contient la librairie bootstrap
+      attention cette ligne est OBLIGATOIRE 
+      vous devez OBLIGATOIREMENT la mettre dans votre page html pour pouvoir utiliser bootstrap
+  </head>
+  <body>
+
+    dans le pieds de page, avant la balise fermante </body>
+    vous avez 3 balises script  
+        1ère appel la librairie jquery.com
+        2ème appel la librairie popper.js
+        3ème et dernière : bootstrap.min.js
+
+    Attention à l'ordre d'appel de chaque librairie !!!!!!
+    OBLIGATOIREMENT jquery puis popper.js puis bootstrap.min.js
+    noter que le deuxieme fichier bootstrap.min.js contient de javascript 
+    le premier (celui qui a été chargé dans la balise head charge du css)
+
+  </body>
+</html>
 -->
 
 <!doctype html>
@@ -25,6 +48,71 @@ Get Started
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <!-- réaliser quelques modifications starter bootstrap 
+        ajouter des balises html classiques 
+    -->
+
+    <!-- ul>li*3>lorem2 -->
+    <ul>
+        <li>Lorem, ipsum.</li>
+        <li>Recusandae, asperiores?</li>
+        <li>Velit, culpa!</li>
+    </ul>
+
+    <h2>Lorem, ipsum dolor.</h2>
+
+    <!-- p>lorem -->
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum sit dolorem aut facilis eveniet. Ipsa assumenda quasi vel explicabo autem eveniet quibusdam dignissimos corporis est impedit? Beatae incidunt provident tempora.</p>
+
+    <!-- insérer un tableau -->
+
+    <!-- table>tr*3>td*2>lorem1 -->
+    <!-- avec bootstrap vous écrivez du html classique 
+        par contre vous allez ajouter des class dans vos balises html pour réaliser des mises 
+        je vais rajouter dans la balise table class table
+        elle vient de boostrap
+
+        table-hover
+
+        écrire du html classique
+        sur lequel vous allez ajouter un ou plusieurs class 
+        et boostrap va réaliser des mis en forme 
+
+        Bootstrap BASE => avec cette base on va pouvoir la modifier = surcharger 
+
+        D'abord de vous expliquer comment on trouve les différentes class 
+        comment on les utilisent 
+
+        -------------
+
+        Demain fin dans l'après midi => comment je peux faire de la surcharge 
+        
+    -->
+    <table class="table table-hover">
+        <tr>
+            <td>Lorem.</td>
+            <td>Praesentium!</td>
+        </tr>
+        <tr>
+            <td>Illo!</td>
+            <td>Qui.</td>
+        </tr>
+        <tr>
+            <td>Quos.</td>
+            <td>Odit.</td>
+        </tr>
+    </table>
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+    </div>
+
+    <!-- dans le documentation officielle > 
+    https://getbootstrap.com/docs/4.4/components/alerts/#dismissing
+    -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
